--- a/Challenger/StoryBoards/SearchGroups.storyboard
+++ b/Challenger/StoryBoards/SearchGroups.storyboard
@@ -46,11 +46,11 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CustomCell" rowHeight="126" id="gTc-Py-wfj" customClass="CellGroups" customModule="Challenger" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CustomCell" rowHeight="126" id="gTc-Py-wfj" customClass="CellGroups" customModule="Challenger" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="126"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gTc-Py-wfj" id="gJr-cu-jIt">
-                                            <rect key="frame" x="0.0" y="0.0" width="342" height="125.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="125.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jrf-3a-bAo">
@@ -61,7 +61,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZyQ-Xd-H0Z">
-                                                    <rect key="frame" x="125.5" y="16" width="192.5" height="20.5"/>
+                                                    <rect key="frame" x="125.5" y="16" width="218.5" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -79,7 +79,6 @@
                                         <connections>
                                             <outlet property="imageGroup" destination="jrf-3a-bAo" id="TFq-IK-wGq"/>
                                             <outlet property="nameGroup" destination="ZyQ-Xd-H0Z" id="IZG-hz-Tal"/>
-                                            <segue destination="Epf-Je-S53" kind="showDetail" identifier="groupSelected" id="jrz-OS-mHZ"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -96,15 +95,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jmk-EV-XOG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="263" y="168"/>
-        </scene>
-        <!--Calendar-->
-        <scene sceneID="1MT-Hw-Fyw">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Calendar" id="Epf-Je-S53" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KkI-EB-dBv" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1001" y="97"/>
+            <point key="canvasLocation" x="261.60000000000002" y="167.76611694152925"/>
         </scene>
     </scenes>
     <resources>
